dark mode fix

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ img {
 }
 
 .navbar {
+  color:#fff;
   position: fixed;
   width: 100%;
   height: 100px;
@@ -101,13 +102,14 @@ img {
 /* HEADER */
 
 .header {
+  color: #fff;
   min-height: 112vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #d7ccc8;
   flex-wrap: wrap;
-  background-image: url(./img/header_bg.png);
+  background-image: url(./img/header_bg2.png);
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover;
